# ReaWrap

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NESTED_CONTAINER_FIX.md  README.md  REAPER API functions.html  REORGANIZATION_PLAN.md  ReaWrap.lua  config.ld  index.xml  init.lua  pyproject.toml
.github/workflows/: build-branch.yml  ci.yml  docs.yml  format-check.yml  release.yml
cpp/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
cpp/examples/: CMakeLists.txt  basic_usage.cpp  test_reawrap.cpp
cpp/include/ReaWrap/: Constants.h  Item.h  Project.h  ReaperAPI.h  Take.h  TakeFX.h  Track.h  TrackFX.h
cpp/src/: Item.cpp  Project.cpp  ReaperAPI.cpp  TakeFX.cpp  Track.cpp  TrackFX.cpp
lua/: README.md  audio_accessor.lua  constants.lua  helpers.lua  item.lua  pcm.lua  plugins.lua  project.lua  take.lua  take_fx.lua  track.lua  track_fx.lua  version.lua
lua/imgui/: init.lua  theme.lua  window.lua
lua/modules/: audio_accessor.lua  constants.lua  helpers.lua  item.lua  project.lua  take.lua  take_fx.lua  track.lua  track_fx.lua  version.lua
lua/tests/: test_project.lua
lua/tests/TestProject/: TestProject.RPP
models/: constants.lua  envelope.lua  fx.lua  helpers.lua  im_gui.lua  item.lua  project.lua  reaper.lua  take.lua  track.lua
modules/: audio_accessor.lua  constants.lua  envelope.lua  fx.lua  helpers.lua  im_gui.lua  item.lua  pcm.lua  project.lua  reaper.lua  take.lua  take_fx.lua  track.lua  track_fx.lua
scripts/: release.py
tests/: assertions.lua  integration_tests.lua  runner.lua  runner_luaunit.lua  simple_test.lua  test_autogen_modules.lua  test_project.lua  test_stale_pointer_fix.lua
tests/TestProject/: TestProject.RPP
tests/docker/: Dockerfile  build.sh  entrypoint.sh  reaper.ini
tests/integration/: README.md  cli_runner.sh  register_test_action.lua  run_tests.sh  test_actions.env.example  test_containers.lua  test_core_classes.lua  test_imgui_integration.lua  test_imgui_visual.lua  test_plugins.lua
tests/mock/: reaper.lua
tests/unit/: test_imgui.lua  test_imgui_luaunit.lua  test_track.lua  test_track_fx.lua  test_track_fx_luaunit.lua  test_track_luaunit.lua  test_version.lua  test_version_luaunit.lua
tools/: bump_version.sh  docs_scraper.py  readocs.html
tools/auto_generated_code/: br.lua  cf.lua  envelope.lua  gsc.lua  imgui.lua  item.lua  js.lua  mrp.lua  nf.lua  pcmsource.lua  project.lua  reapack.lua  reaper.lua  snm.lua  take.lua  timemap.lua  track.lua  tracklist.lua  xen.lua
tools/autogenerated_modules/: audio_accessor.lua  blink.lua  br.lua  c_surf.lua  cf.lua  constants.lua  dock.lua  envelope.lua  fab.lua  fng.lua  gu.lua  helpers.lua  hwnd.lua  im_gui.lua  item.lua  jb.lua  joystick.lua  js.lua  lice.lua  llm.lua  main.lua  master.lua  mcu_live.lua  media_item.lua  media_item_take.lua  media_track.lua  menu.lua  midi.lua  midi_editor.lua  mrp.lua  nf.lua  pcm.lua  project.lua  rea_pack.lua  rea_project.lua  reaper.lua  snm.lua  take.lua  take_fx.lua  theme_layout.lua  (+7 more)
tools/doc_css/: ldoc.css
tools/modules_generator/: __init__.py  __main__.py  docs_scraper.py
tools/modules_generator/HTML/: ReaScript API — Documentation.html
tools/modules_generator/templates/: constants.jinja2  function_body.jinja2  function_call.jinja2  function_signature.jinja2  local_obj.jinja2  method.jinja2  module.jinja2
